deploy/oxomine.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: oxomine
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: oxomine
      tier: app
  template:
    metadata:
      name: oxomine
      labels:
        app: oxomine
        tier: app
    spec:
      containers:
        - name: rails
          image: eu.gcr.io/oxon-infrastructure/oxomine:$TAG
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /account/register
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 65
          livenessProbe:
            httpGet:
              path: /account/register
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 65
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=oxon-infrastructure:europe-west1:shared-db=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
