deploy/oxomine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oxomine
  labels:
    app: oxomine
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: oxomine
    tier: app
