deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oxomine
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "oxomine"
spec:
  backend:
    serviceName: oxomine
    servicePort: 80
